added icons & corrections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/animate.css">
+    <link rel=" shortcut icon" href="./img/hexa/1.gif">
 </head>
 
 <body>
@@ -197,8 +198,8 @@
                     <img class="card-img-top" src="./img/proj/bac-ground-gen.png" height="200px" alt="Card image cap">
 
                     <div class="card-body">
-                        <h4 class="card-text">BackGround-Gnerator</h4>
-                        <p>A Bcakground genertor using pure JavaScript</p>
+                        <h4 class="card-text">BackGround-Generator</h4>
+                        <p>A Background generator using pure JavaScript</p>
                         <button class="btn btn-primary">View Source</button>
                     </div>
                 </div>
