--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse mr-auto justify-content-end" id="navbarsExampleDefault">
                 <ul class="navbar-nav ">
                     <li class="nav-item">
-                        <a class="nav-link " href="#"><b>Home</b> </a>
+                        <a class="nav-link " href="#home"><b>Home</b> </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about"><b>AboutMe</b></a>
@@ -40,7 +40,7 @@
         </div>
     </nav>
     <!-- nav end -->
-    <div class="page-header section-dark" style="background-image: url('./img/antoine-barres.jpg')">
+    <div class="page-header section-dark" id="home" style="background-image: url('./img/antoine-barres.jpg')">
         <div class="filter"></div>
         <div class="content-center">
             <div class="container">
@@ -56,7 +56,7 @@
         </div>
         <div class="moving-clouds" style="background-image: url('./img/clouds.png'); "></div>
     </div>
-    <div id="about">
+    <div id="about" style="padding-top:10px">
         <br>
         <div class="container box-about wow bounceInUp" data-wow-delay="0.5s">
             <br>
@@ -179,8 +179,8 @@
         </div>
     </div>
     <hr>
-    <div class="row"></div>
-    <div id="projects" style="margin-top:50px; margin-bottom: 50px;">
+
+    <div id="project" style="padding-top:85px; margin-bottom: 50px;">
         <h1 style="font-size:55px; text-align:center;">Projects</h1>
         <div class="container ">
             <div class=" card-cc" style="margin-top:50px;">
