addef tilt JS lib

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
             <hr><br>
             <div class="row clearfix">
                 <div class="col-md-5 center" style="display:flex; justify-content:center">
-                    <img src="./img/hexa/1.gif" class="wow bounceInLeft" data-wow-delay=".6s" data-wow-duration=".6s" height="300px" alt="">
+                    <div data-tilt>
+                        <img src="./img/hexa/1.gif" class="wow bounceInLeft" data-wow-delay=".6s" data-wow-duration=".6s" height="300px" alt="">
+                    </div>
                 </div>
                 <div class="col-md-1"></div>
                 <div class="col-md-5 wow bounceInRight" data-wow-delay=".8s" style="text-align:center">
@@ -251,6 +253,7 @@
     <script src="./js/bootstrap.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/wow.js"></script>
+    <script src="./js/tilt.jquery.js"></script>
     <script>
         new WOW().init();
     </script>
