--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="title-brand">
                     <h1 class="presentation-title">Hi, Iam Saran</h1>
-                    <h2 class="presentation-subtitle text-center">Web-Developer</h2>
+                    <h2 class="presentation-subtitle text-center">UI/UX Developer</h2>
                     <div class="fog-low">
                         <img src="./img/fog-low.png" alt="">
                     </div>
