--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
                                     <div class="inner">
                                         <p>Face recognition: Created with React and ..... API</p>
                                         <div class="btn btn-group">
-                                            <a href="#" target="_blank" class="btn btn-sm btn-outline-success">View Source</a>
+                                            <a href="https://github.com/asaran97/face_reg_app" target="_blank" class="btn btn-sm btn-outline-success">View
+                                                Source</a>
                                         </div>
                                     </div>
                                 </div>
